@@ -1501,6 +1501,27 @@ describe 'Asciidoctor::PDF::Converter - TOC' do
     (expect pdf.find_unique_text 'Table of Contents').not_to be_nil
   end
 
+  it 'should not include section title or its children in toc if title is empty' do
+    pdf = to_pdf <<~'EOS', analyze: true, debug: true
+    = Document Title
+    :toc:
+    :title-page:
+
+    == First Section
+
+    == {empty}
+
+    === Child Section
+
+    content
+    EOS
+
+    toc_lines = pdf.lines pdf.find_text page_number: 2
+    (expect toc_lines).to have_size 2
+    (expect toc_lines[0]).to eql 'Table of Contents'
+    (expect toc_lines[1]).to start_with 'First Section'
+  end
+
   it 'should allocate correct number of pages for toc if line numbers cause lines to wrap' do
     chapter_title = %(\n\n== A long chapter title that wraps to a second line in the toc when the page number exceeds one digit)
 
